--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html>
+<head>
+    
+  <title id="title">Gaehive Manager Portal</title>
+  <link rel="icon" href="./favicon.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
+</head>
+
 <html lang="en">
   <body>
     <script type="module" src="/src/main.js"></script>
