--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<script type="module" src="/src/main.js"></script>
+<head>
+  <title id="title">Gaehive Manager Portal</title>
+  <link rel="icon" href="./favicon.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script type="module" src="/src/main.js"></script>
+</head>
