--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <head>
     
     <title id="title">Gaehive Manager Portal</title>
-    <link rel="icon" href="./favicon.png">
+    <link rel="icon" href="/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="preconnect" href="https://fonts.gstatic.com/" /><link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin /><link href="https://fonts.googleapis.com/css?family=Marck+Script&display=block" rel="stylesheet"/><link href="https://fonts.googleapis.com/css?family=Montserrat&display=block" rel="stylesheet"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com/" />
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
+    <link href="https://fonts.googleapis.com/css?family=Marck+Script&display=block" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=block" rel="stylesheet"/>
 
     
 </head>
