--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <head>
     
-    <title id="title">Gaehive Manager Portal</title>
-    <link rel="icon" href="/favicon.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="/bg.svg" />
-    <link rel="preconnect" href="https://fonts.gstatic.com/" /><link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin /><link href="https://fonts.googleapis.com/css?family=Montserrat&display=block" rel="stylesheet"/>
+  <title id="title">Gaehive Manager Portal</title>
+  <link rel="icon" href="/favicon.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="/bg.svg" />
+  <link rel="preconnect" href="https://fonts.gstatic.com/" />
+  <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
     
 </head>
 <html lang="en">
